--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
 @import "reset.css";
 
+html
+{
+    line-height: normal;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -8,8 +13,9 @@ body {
 }
 
 header {
+    
     color: #b8b6b4;
-    height: 10%;
+    height: 10vh;
     background-color: #171a21;
     display: flex;
     text-align: center;
@@ -19,12 +25,31 @@ nav {
     margin: auto 3em;
 }
 
+nav ul
+{
+    margin: 1em 0;
+    padding-left: 2em;
+}
+
 li {
     display: inline-block;
 }
 
 nav li {
     padding: 0 1em;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    font-weight: bold;
+}
+
+small
+{
+    font-size: smaller;
 }
 
 a {
@@ -54,6 +79,15 @@ aside a {
 aside img, aside ul {
     padding: 0;
     width: 100%;
+}
+
+ul
+{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    padding-inline-start: 40px;
 }
 
 aside li {
@@ -100,13 +134,18 @@ section {
 }
 
 section blockquote {
-    margin: 0;
+    margin: 4px 0;
     width: 60%;
     font-size: small;
     background-color: #171a21;
     padding: 0.7em;
     color: #b8b6b4;
     border-top: 1px solid rgba(85, 125, 171, 0.6)
+}
+
+p
+{
+    margin: 1em 0;
 }
 
 p small {
@@ -122,6 +161,13 @@ hr {
     height: 1px;
     color:rgba(85, 125, 171, 0.6);
     background-color:rgba(85, 125, 171, 0.6);
+    
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    overflow: hidden;
+    border-style: inset;
 }
 
 .value ul {
@@ -164,6 +210,11 @@ h4 small {
 
 h1 {
     margin: 0.5em 2.5em;
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    font-weight: bold;
 }
 
 input, textarea {
